css/main.css
/*
 * HTML5 Boilerplate
 *
 * What follows is the result of much research on cross-browser styling.
 * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
 * Kroc Camen, and the H5BP dev community and team.
 */

/* ==========================================================================
   Base styles: opinionated defaults
   ========================================================================== */

html,
button,
input,
select,
textarea {
    color: #222;
}

body {
    font-size: 1em;
    line-height: 1.4;
}

/*
 * Remove text-shadow in selection highlight: h5bp.com/i
 * These selection rule sets have to be separate.
 * Customize the background color to match your design.
 */

::-moz-selection {
    background: #b3d4fc;
    text-shadow: none;
}

::selection {
    background: #b3d4fc;
    text-shadow: none;
}

/*
 * A better looking default horizontal rule
 */

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1em 0;
    padding: 0;
}

/*
 * Remove the gap between images and the bottom of their containers: h5bp.com/i/440
 */

img {
    vertical-align: middle;
}

/*
 * Remove default fieldset styles.
 */

fieldset {
    border: 0;
    margin: 0;
    padding: 0;
}

/*
 * Allow only vertical resizing of textareas.
 */

textarea {
    resize: vertical;
}

/* ==========================================================================
   Chrome Frame prompt
   ========================================================================== */

.chromeframe {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}

/* ==========================================================================
   Author's custom styles
   ========================================================================== */

/* -------------------------- Modules -------------------------------*/

#photo {
    position: relative;
}
#photo img {
    width: 100%;
    overflow: none;
}
#photo .caption {
    /*margin-left: 35px;*/
    font-size: 25px;
    /*text-shadow: 0 0px 3px #333;*/
    color: #eee;
    font-family: 'Raleway', sans-serif;
    position: absolute;
    bottom: 0px;
    background: #111; /* fallback */
    background: rgba(0,0,0,0.7);
    padding: 0 17px 0 0;
    width: 100%;
    line-height: 2.17em; /* matches margin, below */
;
    background: white;
    color: #111;
}

/*
#letter p {
  margin-bottom: 0
}
#letter p + p {
  text-indent: 1.5em;
  margin-top: 0
}
*/

#letter p {
    font-size: 18px;
    line-height: 1.5;
    font-family: 'PT Serif', serif;
    /*margin: 1em 35px;*/
    margin: 0.83em 60px 0em;
    /*margin-top: 0.83em;*/
    color: #222;
    font-family: Georgia, serif;
}
#map .cartodb-infowindow {
    /* display: none; */ /* hack until we can disable via js. */
}

#letter .closing {
    font-style: italic;
}
#letter p:first-child {
    /* extra space at start of letter and between text and closing */
    margin-top: 2.17em;
    /* margin from http://www.w3.org/Style/Examples/007/indent.en.html */
}
#letter .closing p + p {
    margin-top: 0;
}

header, footer {
    background: #efefef;
    text-align: center;
    font-family: 'Raleway', sans-serif;
    padding: 1em;
}
header h1 {
    margin: 0;
    font-size: 31px;
    font-weight: normal;
    color: #111;
    padding: .125em 0;
    border-top: 1px solid #c0c0c0;
}
header a {
    text-decoration: none;
    color: #111;
}
footer {
    position: absolute;
    bottom: 0;
    width: 40%;
}
#sidebar, footer {
    border-right: 5px solid #111;
}

.caption div {
    display: inline-block;
}


/* -------------------------- Animation------------------------------*/
.caption div.is-offscreen {
    display: none;
}

.caption div {
    /* prevent text in div from wrapping when we push it off right edge. */
    position: absolute;
    left: 0;
}

#photo img {
    position: absolute;
    left: 0;
}


/* ------------------------- Layout ---------------------------------*/
/* TODO: investigate custom scrollbars - http://manos.malihu.gr/tuts/jquery_custom_scrollbar.html
  http://css-tricks.com/custom-scrollbars-in-webkit/  */;
/* apply a natural box layout model to all elements */
*, *:before, *:after {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  /* http://html5please.com/#box-sizing */
 }

html, body, #sidebar {
    height: 100%;  /* use entire screen */
}
#sidebar {
    float: left;
    width: 40%;
    border: none;
}
#letter {
    overflow-y: scroll;
    -webkit-overflow-scrolling: touch;
}


header {
    padding: 0;
    background: #F0F0F0;
    border-bottom: 1px solid #c0c0c0;
}
#intro {
    text-align: left;
    padding: .83em 60px 1em;
    font-size: 19px;
    background: #000000;
    color: #eee;
}
footer p {
    margin: 0;
}
#map, #photo {
    margin-left: 40%; /* to side of letter */
    width: 60%;
}
#photo {
    height: 70%;
    overflow: hidden;
}
#map {
    height: 30%;
    border-left: 1px solid #c0c0c0;
    border-top: 1px solid #c0c0c0;
}


/* TODO: sticky footer. */
/*http://www.cssstickyfooter.com/using-sticky-footer-code.html*/
#letter {overflow:auto;

}  /* must be same height as the footer */

#sidebar footer {
    position: relative;
    margin-top: -150px; /* negative value of footer height */
    height: 150px;
    clear:both;}

/*Opera Fix*/
body:before {
    content:"";
    height:100%;
    float:left;
    width:0;
    margin-top:-32767px;/
}


/* ==========================================================================
   Helper classes
   ========================================================================== */

/*
 * Image replacement
 */

.ir {
    background-color: transparent;
    border: 0;
    overflow: hidden;
    /* IE 6/7 fallback */
    *text-indent: -9999px;
}

.ir:before {
    content: "";
    display: block;
    width: 0;
    height: 150%;
}

/*
 * Hide from both screenreaders and browsers: h5bp.com/u
 */

.hidden {
    display: none !important;
    visibility: hidden;
}

/*
 * Hide only visually, but have it available for screenreaders: h5bp.com/v
 */

.visuallyhidden {
    border: 0;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
}

/*
 * Extends the .visuallyhidden class to allow the element to be focusable
 * when navigated to via the keyboard: h5bp.com/p
 */

.visuallyhidden.focusable:active,
.visuallyhidden.focusable:focus {
    clip: auto;
    height: auto;
    margin: 0;
    overflow: visible;
    position: static;
    width: auto;
}

/*
 * Hide visually and from screenreaders, but maintain layout
 */

.invisible {
    visibility: hidden;
}

/*
 * Clearfix: contain floats
 *
 * For modern browsers
 * 1. The space content is one way to avoid an Opera bug when the
 *    `contenteditable` attribute is included anywhere else in the document.
 *    Otherwise it causes space to appear at the top and bottom of elements
 *    that receive the `clearfix` class.
 * 2. The use of `table` rather than `block` is only necessary if using
 *    `:before` to contain the top-margins of child elements.
 */

.clearfix:before,
.clearfix:after {
    content: " "; /* 1 */
    display: table; /* 2 */
}

.clearfix:after {
    clear: both;
}

/*
 * For IE 6/7 only
 * Include this rule to trigger hasLayout and contain floats.
 */

.clearfix {
    *zoom: 1;
}

/* ==========================================================================
   EXAMPLE Media Queries for Responsive Design.
   These examples override the primary ('mobile first') styles.
   Modify as content requires.
   ========================================================================== */

@media only screen and (min-width: 35em) {
    /* Style adjustments for viewports that meet the condition */
}

@media print,
       (-o-min-device-pixel-ratio: 5/4),
       (-webkit-min-device-pixel-ratio: 1.25),
       (min-resolution: 120dpi) {
    /* Style adjustments for high resolution devices */
}

/* ==========================================================================
   Print styles.
   Inlined to avoid required HTTP connection: h5bp.com/r
   ========================================================================== */

@media print {
    * {
        background: transparent !important;
        color: #000 !important; /* Black prints faster: h5bp.com/s */
        box-shadow: none !important;
        text-shadow: none !important;
    }

    a,
    a:visited {
        text-decoration: underline;
    }

    a[href]:after {
        content: " (" attr(href) ")";
    }

    abbr[title]:after {
        content: " (" attr(title) ")";
    }

    /*
     * Don't show links for images, or javascript/internal links
     */

    .ir a:after,
    a[href^="javascript:"]:after,
    a[href^="#"]:after {
        content: "";
    }

    pre,
    blockquote {
        border: 1px solid #999;
        page-break-inside: avoid;
    }

    thead {
        display: table-header-group; /* h5bp.com/t */
    }

    tr,
    img {
        page-break-inside: avoid;
    }

    img {
        max-width: 100% !important;
    }

    @page {
        margin: 0.5cm;
    }

    p,
    h2,
    h3 {
        orphans: 3;
        widows: 3;
    }

    h2,
    h3 {
        page-break-after: avoid;
    }
}

